--- a/frontend_spa/css-folder/about-us.css
+++ b/frontend_spa/css-folder/about-us.css
@@ -1,4 +1,5 @@
-/* 
+/* all styling for about-us page lies here
+
 font-family: 'Lora', serif;
 font-family: 'Work Sans', sans-serif;
 
@@ -71,17 +72,7 @@ margin-bottom:10px;
 .content-container .image img{
 width:90%;
 height:auto;
-/*transform:scale(1) rotate3d(5deg);
-transition: transform .5s; */
 }
-
-/* to keep or not to keep? it messes with navbar
-
-.content-container .image:hover img{
- -ms-transform: scale(1.3); 
--webkit-transform: scale(1.3); 
- transform: scale(1.3) rotate(-10deg); 
-} */
 
 .content-container .image.right{
 float:right;
