--- a/frontend_spa/css-folder/style.css
+++ b/frontend_spa/css-folder/style.css
@@ -35,17 +35,19 @@ main{
     flex-direction: column;
     align-items: center;
     padding: 10px;
-    background-color: black;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: aliceblue;
-}
+    padding-bottom: 20px;
+    background-color: #100c08;
+    font-family: 'Lora', serif;
+    color: #bfbab4;
+} 
 
-#dateSelect{
+ #dateSelect{
     font-size: 14px;
     padding: 2px;
-    margin-bottom: 2px;
-    background-color: rgb(46, 45, 45);
-    color: aliceblue;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    background-color: #0a0705;
+    color: #bfbab4;
 }
 
 #movieTitle{
@@ -54,7 +56,7 @@ main{
     margin-top: 40px;
 }
 
-#showInfo{
+ #showInfo{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     text-align: center;
@@ -70,23 +72,7 @@ main{
 
 }
 
-.filmScheduleDiv{
-    max-width: 100%;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    justify-content: center;
-    grid-gap: 20px;
-    padding: 20px;
-    align-items: center;
-}
 
-.filmScheduleSpan{
-    align-items: center;
-    margin: 20px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: aliceblue;
-    text-align: center;
-}
 
 .showDataDiv{
     align-items: center;
@@ -121,12 +107,7 @@ main{
     left: 200px;
 }
 
-.movie-trailer{
-    height: 600px;
-    width: 100%;
-    position:static;
-    top: 30px;
-}
+
 
 .movie-title-container{
     position: absolute;
@@ -135,7 +116,7 @@ main{
 }
 .movie-trailer-container{
     max-width: 100%;
-    height: 600px;
+    height: 200px;
 }
 
 .movie-description-container{
@@ -150,246 +131,6 @@ main{
     position: absolute;
     left: 2%;
     top: 630px;
-}
-
-/*Style for the slideshow
-
-.container{
-     width: 85%;
-     position: static;
-     top: 50px;
-     left: 50px;
- }
- 
- .container .image img{
-     width: 100%;
-     height: 500px;
-     object-fit: cover;
-     border-radius: 15px;
-
- }
- 
- .container .button{
-     position: inherit;
-     top: 60%;
-     left: 5px;
-     width: 100%;
-     display: flex;
-     justify-content: space-between;
- }
- 
- .container .button a{
-     width: 40px;
-     height: 40px;
-     text-align: center;
-     line-height: 40px;
-     vertical-align: middle;
-     align-items: center;
-     cursor:pointer;
-     color: white;
-     background: rgba(0, 0, 0, 0.8);
-     font-size: 20px;
- }*/
-
-
- /*
- *  Style for show page components
- * 
- *  Moved to show_page_syle.css
- */
-
-/*#showMain{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    margin: 0 auto;
-}
-
-#movieImageContainer{
-    text-align: center;
-}
-
-#total-price-container{
-    position: absolute;
-    border: white;
-}
-
-#customerCategorySelection{
-    margin-top: 100px;
-    user-select: none;
-}
-
-#customerCategoryH{
-    font-size: 30px;
-    text-align: center;
-    margin: 0 auto;
-}
-
-.customerCategoryDiv{
-    margin: 0 auto;
-    font-size: 25px;
-    max-width: 300px;
-}
-
-.innerDiv{
-    display: flex;
-    justify-content: space-between;
-    padding: 5px;
-}
-
-.customerCategoryP{
-   padding-left: 15px;
-   padding-right: 15px;
-}
-
-.customerCategorySpanTop{
-    float: right;
-}
-
-.customerCategorySub{
-    display: inline-block;
-    margin-right: 15px;
-    border: solid 1px;
-    border-radius: 6px;
-    width: 25px;
-    text-align: center;
-    background-color:#433424;
-}
-
-.customerCategorySub:hover{
-    cursor: pointer;
-    background-color: #949494;
-}
-
-.customerCategoryAdd{
-    display: inline-block;
-    margin-left: 15px;
-    border: solid 1px;
-    border-radius: 6px;
-    width: 25px;
-    text-align: center;
-    background-color: #433424;
-}
-
-.customerCategoryAdd:hover{
-    cursor: pointer;
-    background-color: #949494;
-}
-
-#auditoriumContainer{
-    margin-top: 100px;
-    align-items: center;
-    text-align: center;
-}
-
-#seatTypes{
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-}
-
-#seatTypes p{
-    margin: 5px;
-    margin-right: 25px;
-    margin-bottom: 10px;
-}
-
-#seatsToSelect{
-    font-size: 20px;
-    margin: 20px;
-}
-
-#screen{
-    background-color: #fff;
-    height: 100px;
-    width: 260px;
-    margin: auto;
-    margin-bottom: 15px;
-    transform: rotateX(-45deg);
-    box-shadow: 0 8px 15px rgba(255, 255, 255, 0.75);
-}
-
-.row{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-}
-
-.seat{
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    height: 20px;
-    width: 20px;
-    margin: 5px;
-    margin-bottom: 10px;
-    background-color: #949494;
-}
-
-.seat:hover{
-    cursor: pointer;
-}
-
-.seatOccupied{
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    height: 20px;
-    width: 20px;
-    margin: 5px;
-    margin-bottom: 10px;
-    background-color: darkred;
-}
-
-.seatSelected{
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    height: 20px;
-    width: 20px;
-    margin: 5px;
-    margin-bottom: 10px;
-    background-color: rgb(37, 201, 86);
-}*/
-
-div#bottom {
-border-top: 1px solid aliceblue;
-}
- div#bottom a{
-color: aliceblue;
-}
-div#bottom {
-width: 100%;
-/*min-width: 1140px;*/
-font-size: 16px;
-letter-spacing: 1px;
-padding-top: 0px;
-padding-bottom: 60px;
-position: relative;
-margin-left: auto;
-margin-right: auto;
-text-align: center;
-height: 40px;
-clear: both;
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-.dropdown {
-position: relative;
-margin-top: 50px;
-margin-right: 30px;
-margin-left: 150px;
-}
-
-.dropdown__content {
-display: none;
-left: 0;
-padding-top: 4px;
-position: absolute;
-top: 100%;
-background-color: rgb(0, 0, 0);
-z-index: 9999;
-height: 150px;
-width: 400px;
-}
-
-.dropdown:hover .dropdown__content {
-display: block;
 }
 
 .container__block {
