fixed mail adress

--- a/frontend_spa/partials/contact.html
+++ b/frontend_spa/partials/contact.html
@@ -14,7 +14,7 @@
      <p class="about-us-text">Kundservice har just nu begränsade öppettider.<br> Vi finns tillgängliga per telefon 010-10 01 11 varje vardag mellan
     10-12.</p><br>
     <p class="about-us-text">Det går också bra att maila.</p>
-    <p class="about-us-text">Du når oss på email <a href="mailto: support@filmvisarna.se"><b>här</a></b> <br>
+    <p class="about-us-text">Du når oss på email <a href="mailto: info@Filmvisarna.nu" target="_blank"><b>här</a></b> <br>
       <p><br></p>
     <p class="about-us-text">Just nu har vi extra långa svarstider, men vi svarar dig så snart vi kan. Det går också bra att ställa frågor till oss
     på Facebook.</p>
