new flik med karta på om oss. adress i footer

--- a/frontend_spa/partials/about.html
+++ b/frontend_spa/partials/about.html
@@ -43,7 +43,7 @@
             Med flera olika events varje år, finns det alltid något spännande som sker hos oss, så kom gärna och upplev
             den fina atmosfär som vi skapat.
             <br>
-            Du hittar oss på <span class="span-adress">Hökhult 5, 340 13 Hamneda</span>
+            Du hittar oss på <a title="Visa karta i ny flik..." target="_blank" href="https://goo.gl/maps/vvQBHrNetinJYCtLA"><span class="span-adress">Hökhult 5, 340 13 Hamneda</span></a>
 
         </p>
     </div>
