--- a/frontend_spa/partials/contact.html
+++ b/frontend_spa/partials/contact.html
@@ -17,7 +17,8 @@
     <p class="about-us-text">Du når oss på email <a href="mailto: info@Filmvisarna.nu" target="_blank"><b>här</a></b> <br>
       <p><br></p>
     <p class="about-us-text">Just nu har vi extra långa svarstider, men vi svarar dig så snart vi kan. Det går också bra att ställa frågor till oss
-    på Facebook.</p>
+    på Facebook.<br> Eller besök oss under våra öppentider 11.00-22.00.<br><a title="Visa karta i ny flik..." target="_blank" href="https://goo.gl/maps/vvQBHrNetinJYCtLA"><span
+        class="span-adress">Hökhult 5, 340 13 Hamneda</span></a></p>
     <p><br></p>
     <p><br></p>
     <p><br></p>
