--- a/frontend_spa/partials/about.html
+++ b/frontend_spa/partials/about.html
@@ -8,12 +8,10 @@
         Året var 1952 min gammelfarfar hadde bestämt sig för att öppna en biograf, och inte bara vilken biograf som
         helst utan
         den första biografen som visade filmer med färg här i Småland. Snabbt blev hans biograf väldigt populärt utöver
-        den lilla
-        staden. Men
-        efter 20 år var han tvungen att stänga ner biografen.
-        Där satt den helt oanvänd och sammlade inget annat än damm. Min gammelfarfar bestämde sig för att behålla
+        den lilla byn. <br> Men efter 20 år var han tvungen att stänga ner biografen.
+        Där satt den helt oanvänd och sammlade inget annat än damm. <br> Min gammelfarfar bestämde sig för att behålla
         bygnaden och efter hans död
-        fick min farfar ärva den. Många gånger som barn lekte jag I den gammla obemannade biografen och skapade en
+        fick min farfar ärva den. <br> Många gånger som barn lekte jag I den gammla obemannade biografen och skapade en
         speciell förknytelse till
         biografen.
     </p>
@@ -43,7 +41,9 @@
             Med flera olika events varje år, finns det alltid något spännande som sker hos oss, så kom gärna och upplev
             den fina atmosfär som vi skapat.
             <br>
-            Du hittar oss på <a title="Visa karta i ny flik..." target="_blank" href="https://goo.gl/maps/vvQBHrNetinJYCtLA"><span class="span-adress">Hökhult 5, 340 13 Hamneda</span></a>
+            Du hittar oss på <a title="Visa karta i ny flik..." target="_blank"
+                href="https://goo.gl/maps/vvQBHrNetinJYCtLA"><span class="span-adress">Hökhult 5, 340 13
+                    Hamneda</span></a>
 
         </p>
     </div>
